plugins {
    id 'org.jetbrains.kotlin.jvm' version '2.2.21'
    id 'org.jetbrains.kotlin.plugin.spring' version '2.2.21'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.jooq.jooq-codegen-gradle' version '3.19.30'
    id 'jacoco'
}

group = 'io.github.gonzily1269'
version = '0.0.1-SNAPSHOT'
description = 'Book Management API (Kotlin+jOOQ)'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-jooq'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'

    // Database & Migration
    implementation 'org.flywaydb:flyway-database-postgresql'
    runtimeOnly 'org.postgresql:postgresql'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    // jOOQ
    implementation 'org.jooq:jooq'
    implementation 'org.jooq:jooq-meta'
    implementation 'org.jooq:jooq-codegen'
    implementation 'org.jooq:jooq-postgres-extensions'
    jooqCodegen 'org.postgresql:postgresql'

    // Kotlin & JSON
    implementation 'org.jetbrains.kotlin:kotlin-reflect'
    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-jooq-test'
    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

kotlin {
    compilerOptions {
        freeCompilerArgs.addAll '-Xjsr305=strict', '-Xannotation-default-target=param-property'
    }
}

sourceSets.main {
    java.srcDirs("build/generated-sources/jooq")
}

jooq {
    configuration {
        jdbc {
            driver = "org.postgresql.Driver"
            url = "jdbc:postgresql://localhost:5432/postgres"
            user = "myuser"
            password = "secret"
        }
        generator {
            database {
                name = "org.jooq.meta.postgres.PostgresDatabase"
                inputSchema = "public"
                includes = ".*"
            }
            target {
                packageName = "io.github.gonzily1269"
            }

        }
    }
}

jacoco {
    toolVersion = "0.8.14"
}

tasks.named('test') {
    useJUnitPlatform()

    // JDK21以降でMockito等を使用する場合に警告を抑止する
    jvmArgs("-XX:+EnableDynamicAgentLoading")

    // テスト成功・失敗に関わらず、終了後にレポート生成タスクを走らせる
    finalizedBy tasks.jacocoTestReport
}

tasks.jacocoTestReport {
    dependsOn tasks.test

    reports {
        xml.required = true
        html.required = true
    }

    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, include: [
                "**/io/github/gonzily1269/book_management/**"
        ], exclude: [
                "**/*Application*", // 起動クラスを除外
                "**/dto/**"         // DTOを除外
        ])
    }))
}